Fix alignment issue on footer icons

--- a/src/main/frontend/styles/partials/_footer.scss
+++ b/src/main/frontend/styles/partials/_footer.scss
@@ -10,6 +10,7 @@
       align-items: center;
       margin-top: 0.5em;
       margin-bottom: 0.5em;
+      align-items: flex-start;
     }
   }
 
